# esp_irrigator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arail_bold_40.c  sdkconfig  sdkconfig.old
components/app_clock/: CMakeLists.txt  app_clock.cpp
components/app_clock/include/: app_clock.hpp
components/app_common/: CMakeLists.txt  app_common.hpp
components/app_wifi/: CMakeLists.txt  app_wifi.cpp
components/clockTime/: CMakeLists.txt  clockTime.cpp
components/commonHeaders/: observerPattern.hpp
components/dht20/: CMakeLists.txt  dht20.cpp
components/dht20/include/: dht20.h
components/dht22/: CMakeLists.txt  dht22.cpp
components/display/: CMakeLists.txt  display.cpp
components/epaper/: CMakeLists.txt  Kconfig.projbuild  Makefile  aller_bld.c  epd1in54_V2.cpp  epdif.cpp  epdpaint.cpp  font12.c  fontArial26.c  icons.c  segoe12.c  segoe20.c  segoe25.c  segoe30.c
components/epaper/include/: epaper.h  epd1in54_V2.h  epdif.h  epdpaint.h  fonts.h  icon.h
components/http_server/: CMakeLists.txt  http_server.cpp  storage.cpp
components/i2c_comm/: CMakeLists.txt  i2c_comm.cpp
components/non_volatile_storage/: CMakeLists.txt  non_volatile_storage.c  non_volatile_storage.h
components/sampleComponent/: CMakeLists.txt  sampleComponent.cpp
main/: CMakeLists.txt  Kconfig.projbuild  display.c  display.h  idf_component.yml  lvgl_demo_ui.c  main.c  main.cpp  main.cpp_old  mqtt.c  portSupervisor.cpp  sntp.cpp  vault.cpp
main/include/: main.h  mqtt.h  port.h  portSupervisor.h  sntp.h  vault.h
spiffs_image/: config.json  hello.txt  index.html  scripts.js
(+10 files in other folders)
